--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <header>
   <nav>
     <a [routerLink]="['']">Home</a>
+    <a [routerLink]="['sample']">Sample</a>
     <a [routerLink]="['about']">About</a>
   </nav>
 </header>
